Corrected spacing on tour-dates.html to format better on larger tablet devices. Completed README.md, corrected id names in modals

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,7 +128,6 @@ footer p a:hover {
 .img-mtb {
     width: 170px;
     height: 170px;
-    border-radius: 50%,;
 }
 
 /* footer */
@@ -179,4 +178,6 @@ footer p {
     padding-bottom: 40px;
     text-align: center;
     color: #14a78f;
+    padding-left: 0;
+    padding-right: 0;
 }
